fixes layout issue with vf-logo inside of vf-global-header

--- a/components/vf-global-header/vf-global-header.scss
+++ b/components/vf-global-header/vf-global-header.scss
@@ -25,6 +25,10 @@ $vf-global-header__link-text--color: set-ui-color(vf-ui-color--black);
   max-width: 78.5rem;
   padding: .5rem 0;
   width: 100%;
+
+  .vf-logo {
+    flex: 1; // necessary for when embl-logo is inside flex-based containers like vf-global-header
+  }
 }
 
 .vf-global-header__site-name {
